--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node backend/server.js",
+    "start": "node backend/server.js",
     "dev": "nodemon backend/server.js"
   },
   "author": "",
